# rust-examples

./: .gitignore  Cargo.toml  README.md
cli/: Cargo.toml
cli-clap/: Cargo.toml
cli-clap-grpc-pingcap-db-diesel/: README.md  docker-compose.yml
cli-clap-grpc-pingcap-db-diesel/workspace/backend/: Cargo.toml
cli-clap-grpc-pingcap-db-diesel/workspace/backend/src/: backend.rs
cli-clap-grpc-pingcap-db-diesel/workspace/client/: Cargo.toml
cli-clap-grpc-pingcap-db-diesel/workspace/client/src/: client.rs
cli-clap-grpc-pingcap-db-diesel/workspace/models/: Cargo.toml  client.rs  convert.rs  mod.rs  orders.rs  schema.rs
cli-clap-grpc-pingcap-db-diesel/workspace/protos/: Cargo.toml  build.rs  refinery.rs  refinery_grpc.rs
cli-clap/src/: main.rs
cli-grpc-tonic-blocking/: Cargo.toml  build.rs
cli-grpc-tonic-blocking/proto/: cli.proto
cli-grpc-tonic-blocking/src/: main.rs
cli-grpc-tonic-blocking/src/cli/: client.rs  server.rs
cli-grpc-tonic-blocking/src/remotecli/: client.rs  server.rs
cli-grpc-tonic/proto/: cli.proto
cli-grpc-tonic/src/: main.rs
cli-grpc-tonic/src/cli/: client.rs  server.rs
cli/src/: cli.yml
cli_grpc_diesel/: .gitignore  Cargo.toml  README  build.rs  diesel.toml
cli_grpc_diesel/backend/src/: backend.rs
cli_grpc_diesel/client/: Cargo.toml
cli_grpc_diesel/migrations/2019-03-18-213310_create_orders/: down.sql  up.sql
cli_grpc_diesel/models/: client.rs  schema.rs
cli_grpc_diesel/protos/: mod.rs  refinery.rs
cli_grpc_diesel/src/: backend.rs  backend.yaml  cli.rs
cli_grpc_diesel/src/protos/: mod.rs
cli_grpc_diesel/workspace/: .env  Cargo.toml  build.rs
cli_grpc_diesel/workspace/backend/: Cargo.toml
cli_grpc_diesel/workspace/backend/src/: backend.rs  backend.yaml
cli_grpc_diesel/workspace/client/: Cargo.toml
cli_grpc_diesel/workspace/client/src/: cli.yaml  client.rs
cli_grpc_diesel/workspace/migrations/2019-03-18-213310_create_orders/: down.sql  up.sql
cli_grpc_diesel/workspace/models/: .orders.rs.swo  Cargo.toml  client.rs  convert.rs  mod.rs  orders.rs  schema.rs
cli_grpc_diesel/workspace/protos/: Cargo.toml  build.rs  mod.rs  refinery.proto  refinery.rs  refinery_grpc.rs  shipment.proto  shipment.rs  shipment_grpc.rs
consul/: .env  Cargo.toml  README  docker-compose.yml
consul/src/: main.rs
db-diesel-postgres/: .env
db-diesel-postgres/migrations/2019-03-10-172842_create_posts/: up.sql
docker/: Cargo.toml  config.yml
docker-shiplift/: Cargo.toml  config.yml
docker-shiplift/src/: main.rs
docker/src/: main.rs
grpc/: Cargo.toml  README
grpc-pingcap/: Cargo.toml  README.md
grpc-pingcap/src/protos/: diner.rs  diner_grpc.rs
grpc/src/protos/: diner.rs  diner_grpc.rs
nsq/: Cargo.toml  README  docker-compose.yml
nsq/src/: consumer.rs  producer.rs
postgresql/: Cargo.toml  docker-compose.yml
postgresql/migrations/2019-03-10-172842_create_posts/: down.sql
postgresql/src/: lib.rs
proc-macro/: Cargo.toml  main.rs
proc-macro/attribute-macro/: Cargo.toml
proc-macro/attribute-macro/src/: lib.rs
redis/: .env  Cargo.toml  docker-compose.yml
redis/src/: main.rs
vault/: .env  Cargo.toml  README  docker-compose.yml
vault/src/: main.rs
