[package]
name = "cli_grpc_diesel"
version = "0.1.0"
authors = ["T.J. Telan <t.telan@gmail.com>"]
edition = "2018"

[lib]
name = "protos"
path = "src/protos/mod.rs"

[[bin]]
name = "cli"
path = "src/cli.rs"

[[bin]]
name = "backend"
path = "src/backend.rs"

[dependencies]
futures = "0.1.16"
protobuf = "~2"
#diesel = { version = "1.0.0", features = ["postgres"] }
dotenv = "0.9.0"
clap = { version = "2.32.0", features = ["yaml"] }
grpcio = { version = "0.5.0", path = "./grpc-rs" }

[build-dependencies]
protoc-grpcio = "1.0.1"
