[package]
name = "grpc-example"
version = "0.1.0"
authors = ["T.J. Telan <t.telan@gmail.com>"]
edition = "2018"

[lib]
name = "protos"
path = "src/protos/mod.rs"

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "client"
path = "src/client.rs"

[dependencies]
futures = "0.1.16"
protobuf = "~2"
# If you want to disable TLS support uncomment this line and comment the reference to the ./grpc-rs directory
#grpcio = { version = "0.4.3", default-features = false, features = [ "protobuf-codec" ] }
grpcio = { version = "0.5.0-alpha.5", path = "./grpc-rs" }

[build-dependencies]
protoc-grpcio = "1.0.1"
