[package]
name = "client-example"
version = "0.1.0"
authors = ["T.J. Telan <t.telan@gmail.com>"]
edition = "2018"

[dependencies]
clap = { version = "2.33", features = ["yaml"] }
dotenv = "0.15.0"
grpcio = { version = "0.5.0-alpha.5", path = "../../grpc-rs" }
protobuf = "~2"
protos-example = { path = "../protos" }
diesel-models-example = { path = "../models" }

[[bin]]
name = "client"
path = "src/client.rs"
