[package]
name = "diesel-models-example"
version = "0.1.0"
authors = ["T.J. Telan <t.telan@gmail.com>"]
edition = "2018"

[dependencies]
futures = "0.1.16"
grpcio = { version = "0.5.0-alpha.5", path = "../../grpc-rs" }
protobuf = "~2"
diesel = { version = "1.4", features = ["postgres", "chrono"] }
dotenv = "0.15.0"
chrono = "0.4"
protos-example = { path = "../protos" }

[lib]
name = "models"
path = "mod.rs"
