[package]
name = "client-example"
version = "0.1.0"
authors = ["T.J. Telan <t.telan@gmail.com>"]
edition = "2018"
build = "../build.rs"

[lib]
name = "protos"
path = "../protos/mod.rs"

[dependencies]
clap = { version = "2.32.0", features = ["yaml"] }
dotenv = "0.9.0"
futures = "0.1.16"
grpcio = { version = "0.5.0", path = "../../grpc-rs" }
protobuf = "~2"

[[bin]]
name = "client"
path = "src/client.rs"

# For build.rs
[build-dependencies]
protoc-grpcio = "1.0.1"
