[package]
name = "client-example"
version = "0.1.0"
authors = ["T.J. Telan <t.telan@gmail.com>"]
edition = "2018"

[dependencies]
clap = { version = "2.32.0", features = ["yaml"] }
dotenv = "0.9.0"
grpcio = { version = "0.5.0", path = "../../grpc-rs" }
protobuf = "~2"
protos-example = { path = "../protos" }

[[bin]]
name = "client"
path = "src/client.rs"
